feat: :sparkles: Add EquipoMenu
menu equipos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MySqlDB": "server=localhost;database=torneosdb;user=root;password=Ju1614129;"
+    "MySqlDB": "server=localhost;database=prueba;user=root;password=Ju1614129;"
   }
 }
